--- a/home/index.html
+++ b/home/index.html
@@ -4,15 +4,12 @@
 <title>My first Vue page</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/flexbox-grid.css?version0.1">
-<link rel="stylesheet" href="css/bind.css?version=0.1">    
-<style>
-    #app {
-      display: inline-block;
-      padding: 10px;
-      font-size: x-large;
-      background-color: lightgreen;
-    }
-</style>
+<link rel="stylesheet" href="css/bind.css?version=0.1">
+<link rel="stylesheet" href="css/images.css?version=0.1">
+
+
+
+
 </head>
 <body>
  
@@ -44,20 +41,20 @@
     <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.
     </div>
 </div>
- 
+
+<div id="app2">
+<div>
+<figure v-for="x in manyFoods">
+<img v-bind:src="x.url">
+<figcaption>{{ x.name }}</figcaption>
+</figure>
+</div>
+</div>
+    
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="js/vue.js"></script>
+<script src="js/images.js"></script>
  
-<script>
-  const app = Vue.createApp({
-   data() {
-    return {
-     message: "Hello World!"
-    }
-   }
-  })
-  app.mount('#app')
- 
-</script>
- 
+
 </body>
 </html>
